make migrator a little more robust